# Goldmind

./: .replit  app.py  automl_models.py  data_fetch.py  healthz.py  indicators.py  model_inference.py  model_pipeline.py  model_train.py  packages.txt  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Proposal-AI-Based-Gold-Crypto-Scalping-System-Project-Objective-To-build-an-AI-driven-scalpin-1758534227549_1758534227549.txt
models/: .gitkeep  ADA_USD.pkl  ADA_USD_info.json  ADA_USD_scaler.pkl  AVAX_USD.pkl  AVAX_USD_info.json  AVAX_USD_scaler.pkl  BNB_USD.pkl  BNB_USD_info.json  BNB_USD_scaler.pkl  BTC_USD.pkl  BTC_USD_info.json  BTC_USD_scaler.pkl  DOT_USD.pkl  DOT_USD_info.json  DOT_USD_scaler.pkl  ETH_USD.pkl  ETH_USD_info.json  ETH_USD_scaler.pkl  GC_F.pkl  GC_F_info.json  GC_F_scaler.pkl  LINK_USD.pkl  LINK_USD_info.json  LINK_USD_scaler.pkl  SOL_USD.pkl  SOL_USD_info.json  SOL_USD_scaler.pkl  XRP_USD.pkl  XRP_USD_info.json  XRP_USD_scaler.pkl
models/automl/: BTC_USD_best.pkl  BTC_USD_ensemble.pkl  BTC_USD_info.json  BTC_USD_scaler.pkl  ETH_USD_best.pkl  ETH_USD_ensemble.pkl  ETH_USD_info.json  ETH_USD_scaler.pkl
